Relacionamento funcionando. o evento e salvo!

--- a/ProjetoDeBloco_FimDeSemana/Views/Shared/_Layout.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Shared/_Layout.cshtml
@@ -23,13 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Eventos" asp-action="Index">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="index">Usuarios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cardapios" asp-action="index">Cardapios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CardapioPersonalizadoes" asp-action="index">CardapioPersonalizadoes</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GerenciaReservas" asp-action="index">Gerencia Reservas</a>
                         </li>
                     </ul>
                 </div>
