Mais correções, Criação de eventos, cardapio e itens parece esta ok.

--- a/ProjetoDeBloco_FimDeSemana/Views/Shared/_Layout.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Eventos" asp-action="Index">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="GerenciaReservas" asp-action="index">Gerencia Reservas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cardapios" asp-action="index">Cardapios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ItemCardapios" asp-action="index">Item do Cardapios</a>
                         </li>
                     </ul>
                 </div>
