--- a/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Create.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.Cardapio
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar Cardápio para evento";
 }
 
-<h1>Create</h1>
+<h1>Adicionar Cardápio para evento</h1>
 
-<h4>Cardapio</h4>
+<h4>Cardápio</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="EventoId" class="control-label"></label>
-                <select asp-for="EventoId" class ="form-control" asp-items="ViewBag.EventoId"></select>
+                <select asp-for="EventoId" class="form-control" asp-items="ViewBag.EventoId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -24,9 +24,11 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volta a lista</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
