--- a/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Delete.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Delete.cshtml
@@ -1,12 +1,11 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.Cardapio
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Remover Cardápio";
 }
 
-<h1>Delete</h1>
+<h1>Deleta cardápio</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Cardapio</h4>
     <hr />
@@ -21,7 +20,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar aos cardápios</a>
     </form>
 </div>
