--- a/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Details.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.Cardapio
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes do Cardápio";
 }
 
-<h1>Details</h1>
+<h1>Detalhes do Cardápio</h1>
 
 <div>
-    <h4>Cardapio</h4>
+    <h4>Cardápio</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -20,5 +20,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
