--- a/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Edit.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.Cardapio
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Cardápio";
 }
 
-<h1>Edit</h1>
+<h1>Editar Cardápio</h1>
 
-<h4>Cardapio</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,14 +18,14 @@
                 <span asp-validation-for="EventoId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
