--- a/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Index.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Index.cshtml
@@ -1,35 +1,36 @@
 ﻿@model IEnumerable<ProjetoDeBloco_FimDeSemana.Models.Cardapio>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Todos os Cardápios";
 }
 
-<h1>Index</h1>
+<h1>Todos os Cardápios</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Adicionar Cardápio</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Evento)
+                @Html.DisplayNameFor(model => model.Evento.Titulo)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Evento.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Evento.Titulo) <!-- Exibe o nome do evento -->
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
