--- a/ProjetoDeBloco_FimDeSemana/Views/Eventos/Index.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Eventos/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProjetoDeBloco_FimDeSemana.Models.Evento>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista de Eventos";
 }
 
-<h1>Index</h1>
+<h1>Lista de Eventos</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Cadastrar novo Evento</a>
 </p>
 <table class="table">
     <thead>
@@ -29,12 +29,6 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.HorarioDeFuncionamento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GerenciaReserva)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Usuario)
             </th>
             <th></th>
         </tr>
@@ -61,15 +55,9 @@
                 @Html.DisplayFor(modelItem => item.HorarioDeFuncionamento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.GerenciaReserva.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
 }
