--- a/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Index.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Index.cshtml
@@ -23,7 +23,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Evento.Titulo) <!-- Exibe o nome do evento -->
+                    @Html.DisplayFor(modelItem => item.Evento.Titulo)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
