--- a/ProjetoDeBloco_FimDeSemana/Views/Eventos/Delete.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Eventos/Delete.cshtml
@@ -1,14 +1,12 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.Evento
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deleta Evento";
 }
 
-<h1>Delete</h1>
+<h1>Deleta Evento</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Evento</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -47,23 +45,11 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.HorarioDeFuncionamento)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GerenciaReserva)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GerenciaReserva.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Usuario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.Id)
-        </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar</a>
     </form>
 </div>
