--- a/ProjetoDeBloco_FimDeSemana/Views/Eventos/Details.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Eventos/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.Evento
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes do Evento";
 }
 
-<h1>Details</h1>
+<h1>Detalhes do Evento</h1>
 
 <div>
-    <h4>Evento</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -46,21 +45,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.HorarioDeFuncionamento)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GerenciaReserva)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GerenciaReserva.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Usuario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.Id)
-        </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
