--- a/ProjetoDeBloco_FimDeSemana/Views/Eventos/Edit.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Eventos/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.Evento
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Evento";
 }
 
-<h1>Edit</h1>
+<h1>Editar Evento</h1>
 
-<h4>Evento</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -44,16 +43,6 @@
                 <span asp-validation-for="HorarioDeFuncionamento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GerenciaReservaId" class="control-label"></label>
-                <select asp-for="GerenciaReservaId" class="form-control" asp-items="ViewBag.GerenciaReservaId"></select>
-                <span asp-validation-for="GerenciaReservaId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UsuarioId" class="control-label"></label>
-                <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
-                <span asp-validation-for="UsuarioId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -61,7 +50,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
