--- a/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Create.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Create.cshtml
@@ -15,6 +15,7 @@
             <div class="form-group">
                 <label asp-for="EventoId" class="control-label"></label>
                 <select asp-for="EventoId" class="form-control" asp-items="ViewBag.EventoId"></select>
+                <span asp-validation-for="EventoId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -24,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Volta a lista</a>
+    <a asp-action="Index">Voltar à lista</a>
 </div>
 
 @section Scripts {
