Ajuste no ItemCardapio, mostra titulo do evento no lugar do item.

--- a/ProjetoDeBloco_FimDeSemana/Views/ItemCardapios/Create.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/ItemCardapios/Create.cshtml
@@ -1,19 +1,18 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.ItemCardapio
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar Item ao Cardápio";
 }
 
-<h1>Create</h1>
+<h1>Adicionar Item ao Cardápio</h1>
 
-<h4>ItemCardapio</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CardapioId" class="control-label"></label>
+                <label asp-for="CardapioId" class="control-label">Evento</label>
                 <select asp-for="CardapioId" class ="form-control" asp-items="ViewBag.CardapioId"></select>
             </div>
             <div class="form-group">
@@ -32,19 +31,14 @@
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ValorTotal" class="control-label"></label>
-                <input asp-for="ValorTotal" class="form-control" />
-                <span asp-validation-for="ValorTotal" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
