--- a/ProjetoDeBloco_FimDeSemana/Views/ItemCardapios/Delete.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/ItemCardapios/Delete.cshtml
@@ -1,21 +1,19 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.ItemCardapio
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar Item do Cardápio";
 }
 
-<h1>Delete</h1>
+<h1>Deletar Item do Cardápio</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ItemCardapio</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cardapio)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cardapio.Id)
+            @Html.DisplayFor(model => model.Cardapio.Evento.Titulo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
@@ -45,7 +43,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar</a>
     </form>
 </div>
