--- a/ProjetoDeBloco_FimDeSemana/Views/ItemCardapios/Details.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/ItemCardapios/Details.cshtml
@@ -1,20 +1,19 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.ItemCardapio
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes do Item";
 }
 
-<h1>Details</h1>
+<h1>Detalhes do Item</h1>
 
 <div>
-    <h4>ItemCardapio</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Cardapio)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cardapio.Id)
+            @Html.DisplayFor(model => model.Cardapio.Evento.Titulo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
@@ -43,6 +42,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
+    <a asp-action="Index">Voltar</a>
 </div>
