--- a/ProjetoDeBloco_FimDeSemana/Views/ItemCardapios/Edit.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/ItemCardapios/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model ProjetoDeBloco_FimDeSemana.Models.ItemCardapio
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Item";
 }
 
-<h1>Edit</h1>
+<h1>Editar Item</h1>
 
-<h4>ItemCardapio</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="CardapioId" class="control-label"></label>
+                <label asp-for="CardapioId" class="control-label">Evento</label>
                 <select asp-for="CardapioId" class="form-control" asp-items="ViewBag.CardapioId"></select>
                 <span asp-validation-for="CardapioId" class="text-danger"></span>
             </div>
@@ -39,14 +38,14 @@
                 <span asp-validation-for="ValorTotal" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Salvar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
