--- a/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Index.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Cardapios/Index.cshtml
@@ -12,9 +12,7 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Evento.Titulo)
-            </th>
+            <th>Eventos</th>
             <th></th>
         </tr>
     </thead>
@@ -26,8 +24,6 @@
                     @Html.DisplayFor(modelItem => item.Evento.Titulo)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
