--- a/ProjetoDeBloco_FimDeSemana/Views/Shared/_Layout.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="index">Usuarios</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Eventos" asp-action="Index">Eventos</a>
                         </li>
                         <li class="nav-item">
