--- a/ProjetoDeBloco_FimDeSemana/Views/Eventos/Index.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Eventos/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.FirstOrDefault().Usuario.NomeCompleto)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Titulo)
             </th>
             <th>
@@ -36,6 +39,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario.NomeCompleto)
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Titulo)
             </td>
