Ajusatdo para associar evento ao usuario.

--- a/ProjetoDeBloco_FimDeSemana/Views/Eventos/Index.cshtml
+++ b/ProjetoDeBloco_FimDeSemana/Views/Eventos/Index.cshtml
@@ -12,9 +12,7 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstOrDefault().Usuario.NomeCompleto)
-            </th>
+            <th> Proprietário </th>
             <th>
                 @Html.DisplayNameFor(model => model.Titulo)
             </th>
@@ -30,9 +28,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.ValorTotal)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HorarioDeFuncionamento)
-            </th>
+            <th> Horário </th>
             <th></th>
         </tr>
     </thead>
